--- a/02 - Akış Kontrol Yapıları.ipynb
+++ b/02 - Akış Kontrol Yapıları.ipynb
@@ -275,7 +275,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bilgisayara bir komutu olduğu gibi yahut ufak değişiklikler ile birden fazla kez vermemiz gerekebilir. Bu tarz edilmesi gerekli kod blokları oluşturmak için döngü yapısı kullanılırız. "
+    "Bilgisayara bir komutu olduğu gibi yahut ufak değişiklikler ile birden fazla kez vermemiz gerekebilir. Bu tarz tekrar edilmesi gerekli kod blokları oluşturmak için döngü yapısı kullanılırız. "
    ]
   },
   {
