--- a/03- Liste(List) Veri Yapısı.ipynb
+++ b/03- Liste(List) Veri Yapısı.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bir isim altında farklı türlerde veri saklayabilmemize olanak sağlayan veri yapılarından bir tanesidir. İçerisindeki elemanlar indexlenmiş şekilde tutulur. İndexler ile elemanlara tek tek ya da alt liste şeklinde ulaşılabilir. İmmutable(değiştirilebilir, güncellenebilir) yapısı vardır. Dolayısıyla elemanları değiştirilebilir, güncellenebilir. "
+    "Bir isim altında farklı türlerde veri saklayabilmemize olanak sağlayan veri yapılarından bir tanesidir. İçerisindeki elemanlar indexlenmiş şekilde tutulur. İndexler ile elemanlara tek tek ya da alt liste şeklinde ulaşılabilir. mutable(değiştirilebilir, güncellenebilir) yapısı vardır. Dolayısıyla elemanları değiştirilebilir, güncellenebilir. "
    ]
   },
   {
